# try-rust-repository

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main
.cargo/: config.toml
deno/: hello.ts  server.ts  test.ts
site/: index.js  package.json
src/: basic.rs  main.rs
src/modules/: mod.rs  my_mod.rs  psql.rs
wasm/src/: lib.rs  main.rs
