[package]
name = "rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
anyhow = "=1.0.36"
# chrono = "=0.4.19"
sqlx = { version = "0.4", features = [ "runtime-tokio-rustls", "postgres", "chrono"] }